# prometheus-effectful

./: LICENSE  Makefile  README.md  prometheus-effectful.cabal
.github/workflows/: ci.yml  linting.yml
src/Effectful/: Prometheus.hs
